gke-rtm-backend-cicd/resourcetechnologymapping/k8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "back-end-service"
  namespace: "logging"
  labels:
    app: "back-end"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "back-end"
  type: "LoadBalancer"
  loadBalancerIP: ""
