gke-rtm-backend-cicd/resourcetechnologymapping/k8s/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: back-end
  labels:
    last_updated: 1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /*
        backend:
          serviceName: back-end
          servicePort: 80
